cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj6_TupleStruct_1.plcfunc
FUNCTION proj6_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj6_TupleStruct_1 := tuple.field6;
END_FUNCTION
